--- a/jPerturb/pom.xml
+++ b/jPerturb/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>fr.inria.gforge.spoon</groupId>
             <artifactId>spoon-core</artifactId>
-            <version>9.0.0</version>
+            <version>9.0.0</version><!-- 👏 -->
         </dependency>
 
         <dependency>
